--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<div>
 		<h1>Mount Longonot Hiking Trail</h1>
 		<p>Rising from the floor of the Great Rift Valley in Kenya is the extinct Volcano of Mount Longonot.<br> It is located south east of lake Naivasha.</p>
-		<img src="Mount%20Longonot3.jpg" width="600px">
+		<img src="Mount%20Longonot3.jpg" height="600px">
 		<h2>Longonot Hiking trail</h2>
 		<p> Hiking to the top of this volcano will be both challenging and rewarding at the same time.</p>
 		<p>Mount Longonot offers a 3.1 Km hiking trail from the entrance to the rim of the crater.</p>
