--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 	</div></a>
 	<footer>
 	<ul>
-		<li><a href=""><img src="Facebook.png" height="50px">Facebook</a></li>
-		<li><a href=""><img src="Twitter.png" height="50px">Twitter</a></li>
-		<li><a href=""><img src="LinkedIn.png" height="50px">LinkedIn</a></li>
-		<li><a href=""><img src="Instagram.png" height="50px">Instagram</a></li>
+		<li><a href="https://facebook.com/KenyaWildlifeService"<img src="Facebook.png" height="100px">Facebook</a></li>
+		<li><a href="https://twitter.com/kwskenya/"><img src="Twitter.png" height="100px">Twitter</a></li>
+		<li><a href="#"><img src="LinkedIn.png" height="100px">LinkedIn</a></li>
+		<li><a href="#"><img src="Instagram.png" height="100px">Instagram</a></li>
 	</ul>	
 	<p>Copyright &copy 2018 <a href="https://avicndugu.com"> Avic Ndugu</a></p>
 	</div>
