--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</div></a>
 	<footer>
 	<ul>
-		<li><a href="https://facebook.com/KenyaWildlifeService"<img src="Facebook.png" height="100px">Facebook</a></li>
+		<li><a href="https://facebook.com/KenyaWildlifeService"><img src="Facebook.png" height="100px">Facebook</a></li>
 		<li><a href="https://twitter.com/kwskenya/"><img src="Twitter.png" height="100px">Twitter</a></li>
 		<li><a href="#"><img src="LinkedIn.png" height="100px">LinkedIn</a></li>
 		<li><a href="#"><img src="Instagram.png" height="100px">Instagram</a></li>
